Improved: URL constructor is deprecated in Java 20 (OFBIZ-12881)
Explanation: https://inside.java/2023/02/15/quality-heads-up/

I have kept the existing log information in UrlLoader, NetConverters, UtilURL
and EmailServices classes