@@ -92,11 +92,15 @@ public class NetConverters implements ConverterLoader {
 
         @Override
         public URL convert(String obj) throws ConversionException {
+            URL url = null;
+            URI uri;
             try {
-                return new URL(obj);
-            } catch (MalformedURLException e) {
+                uri = new URI(obj);
+                url = uri.toURL();
+            } catch (IllegalArgumentException | URISyntaxException | MalformedURLException e) {
                 throw (ConversionException) new ConversionException(e.getMessage()).initCause(e);
             }
+            return url;
         }
     }
 
