@@ -27,6 +27,8 @@ import java.io.StringReader;
 import java.io.StringWriter;
 import java.io.Writer;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Date;
 import java.util.LinkedHashMap;
@@ -401,10 +403,11 @@ public class EmailServices {
         LocalDispatcher dispatcher = ctx.getDispatcher();
 
         URL url = null;
-
+        URI uri;
         try {
-            url = new URL(bodyUrl);
-        } catch (MalformedURLException e) {
+            uri = new URI(bodyUrl);
+            url = uri.toURL();
+        } catch (IllegalArgumentException | URISyntaxException | MalformedURLException e) {
             Debug.logWarning(e, MODULE);
             return ServiceUtil.returnError(UtilProperties.getMessage(RESOURCE, "CommonEmailSendMalformedUrl", UtilMisc.toMap("bodyUrl",
                     bodyUrl, "errorString", e.toString()), locale));
